@@ -22,7 +22,7 @@ class Admin::UsersController < Admin::ApplicationController
   # GET /admin/users.xml
   #----------------------------------------------------------------------------
   def index
-    @users = User.all
+    @users = User.all.paginate
 
     respond_to do |format|
       format.html # index.html.haml
