@@ -182,6 +182,9 @@
 .urgent
   :color darkred
 
+.black
+  :color black
+
 .strip
   :background gainsboro
   :color black
