@@ -1,6 +1,18 @@
-.title Users
-%p
+= styles_for :user
+
+.title_tools
+  = link_to_inline(:create_user, new_admin_user_path)
+
+.title
+  %span#create_user_title Users
+  = image_tag("loading.gif", :size => "16x16", :id => "loading", :style => "display: none;")
+.remote#create_user{ hidden }
+
+.list#users= render :partial => "user", :collection => @users
+#paginate= render :partial => "common/paginate"
+
 :erb
+  <!--
   <table>
   <% @users.each do |user| %>
     <tr>
@@ -17,7 +29,6 @@
     </tr>
   <% end %>
   </table>
-
   <br />
-
   <%= link_to 'New user', new_admin_user_path %>
+  -->
