@@ -7,17 +7,21 @@
   
   - if models.include?(:campaign)
     - Setting.campaign_status_color.each do |key, value|
-      == li.campaign .#{key} { background:#{value}; }
+      li.campaign .#{key} { background:#{value}; }
 
   - if models.include?(:lead)
     - Setting.lead_status_color.each do |key, value|
-      == li.lead .#{key} { background:#{value}; }
+      li.lead .#{key} { background:#{value}; }
 
   - if models.include?(:opportunity)
     - Setting.opportunity_stage_color.each do |key, value|
-      == li.opportunity .#{key} { background:#{value}; }
+      li.opportunity .#{key} { background:#{value}; }
 
   - if models.include?(:task)
     - Setting.task_category_color.each do |key, value|
-      == li.task .#{key} { background:#{value}; }
+      li.task .#{key} { background:#{value}; }
 
+  - if models.include?(:user)
+    li.user .admin     { background: lightpink; }
+    li.user .suspended { background: gainsboro; }
+    li.user .active    { background: lightgreen; }
