@@ -14,6 +14,7 @@ Sass::Plugin.options[:css_location] = File.join(RAILS_ROOT, "public/stylesheets"
 #---------------------------------------------------------------------
 Date::DATE_FORMATS[:mmddyyyy] = "%m/%d/%Y"
 Date::DATE_FORMATS[:mmdd] = "%b %e"
+Date::DATE_FORMATS[:mmddyy] = "%b %e, %Y"
 Time::DATE_FORMATS[:mmddhhss] = "%b %e at %l:%M%p"
 
 #---------------------------------------------------------------------
