@@ -148,6 +148,9 @@
 .urgent {
   color: darkred; }
 
+.black {
+  color: black; }
+
 .strip {
   background: gainsboro;
   color: black;
