@@ -288,6 +288,9 @@ tt {
 .urgent {
   color: darkred; }
 
+.black {
+  color: black; }
+
 .strip {
   background: gainsboro;
   color: black;
