@@ -4,7 +4,11 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
-Fir, Jul 31, 2009
+Sat, Aug 1, 2009
+---------------------------------------------------------------------
+- More work on Admin/Users.
+
+Fri, Jul 31, 2009
 ---------------------------------------------------------------------
 - Added [suspended_at] to User model, fixed typo (LH #81).
 
